<resources>
    <string name="app_name">Restaurant</string>
    <string name="text">Login/Create Account quickly to manage orders</string>
    <string name="account">ACCOUNT</string>
    <string name="login">login</string>
    <string name="info">LOGIN</string>
    <string name="mobile">Enter your Email to proceed</string>
    <string name="signin">SIGN IN</string>
    <string name="create">Create an account with your Email</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="signup">SIGN UP</string>
    <string name="register">register</string>
    <string name="verify">VERIFY DETAILS</string>
    <string name="location">Location</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="name">NAME</string>
    <string name="search">SEARCH</string>
    <string name="dashboard">Dashboard</string>
    <string name="restaurant">Restaurants</string>
    <string name="orders">Orders</string>
    <string name="about">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
</resources>